--- a/dieu.html
+++ b/dieu.html
@@ -27,5 +27,6 @@
 <body>
     <h1>Chào mừng bạn!</h1>
     <button onclick="alert('Xin chào!')">Xin chào</button>
+    <h1>hehehe</h1>
 </body>
 </html>
